# husky_control_ros

./: CMakeLists.txt  README.md  package.xml
include/: husky_controller.h
model/: husky_scene(sphere).ttt  husky_scene.ttt
src/: husky_controller.cpp  main.cpp  test_main_vrep.cpp
